name title scaling issues on mobile fixed

--- a/src/routes/navigation/navigation.styles.scss
+++ b/src/routes/navigation/navigation.styles.scss
@@ -1,44 +1,44 @@
 .navigation {
-    height: 80px;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 25px;
-  
+  height: 80px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 25px;
+
+  .title {
+    // display: none;
+    height: 100%;
+    width: 50%;
+    text-align: left;
+    justify-content: center;
+    padding-left: 45px;
+    padding-top: 10px;
+    padding-bottom: 50px;
+    font-size: 100%;
+  }
+
+  @media (max-width: 600px) {
     .title {
-      display: none;
-      height: 100%;
-      width: 50%;
-      text-align: left;
-      justify-content: center;
-      padding-left: 45px;
-      padding-top: 10px;
-      padding-bottom: 50px;
-    }
-
-    @media (min-width: 600px) {
-      .title {
-        display: block;
-      }
-    }
-
-    .logo-container {
-      height: 100%;
-      width: 70px;
-      padding: 25px;
-    }
-  
-    .nav-links-container {
-      width: 50%;
-      height: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: flex-end;
-
-      .nav-link {
-        padding: 10px 15px;
-        cursor: pointer;
-      }
+      font-size: 75%;
     }
   }
-  
+
+  .logo-container {
+    height: 100%;
+    width: 70px;
+    padding: 25px;
+  }
+
+  .nav-links-container {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+
+    .nav-link {
+      padding: 10px 15px;
+      cursor: pointer;
+    }
+  }
+}
